[package]
name = "pytest-language-server"
version = "0.22.1"
edition = "2021"
rust-version = "1.85"
authors = ["Thiago Bellini Ribeiro <hackedbellini@gmail.com>"]
license = "MIT"
description = "A blazingly fast Language Server Protocol implementation for pytest"
repository = "https://github.com/bellini666/pytest-language-server"
keywords = ["pytest", "lsp", "language-server", "testing"]
categories = ["development-tools", "development-tools::testing"]

[[bin]]
name = "pytest-language-server"
path = "src/main.rs"

[lib]
name = "pytest_language_server"
path = "src/lib.rs"

[dependencies]
tower-lsp-server = "0.23.0"
tokio = { version = "1.52", features = ["full"] }
serde_json = "1.0"
rustpython-parser = "0.4.0"
walkdir = "2.5"
dashmap = "6.2"
once_cell = "1.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1"
rayon = "1.12.0"
memchr = "2.8.1"
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"

[dev-dependencies]
insta = { version = "1.47", features = ["yaml"] }
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27.0"
ntest = "0.9"
